refactor(security): update CORS configuration to allow specific frontend origin